--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ bcrypt==3.1.7
 blinker==1.4
 Brlapi==0.7.0
 certifi==2019.11.28
+cffi==1.14.6
 chardet==3.0.4
 click==8.0.1
 colorama==0.4.3
@@ -10,6 +11,7 @@ command-not-found==0.3
 cryptography==2.8
 cupshelpers==1.0
 dbus-python==1.2.16
+decorator==4.4.2
 defer==1.0.6
 distro==1.4.0
 distro-info===0.23ubuntu1
@@ -32,9 +34,11 @@ lockfile==0.12.2
 louis==3.12.0
 macaroonbakery==1.3.1
 Mako==1.1.0
+mariadb==1.0.7
 MarkupSafe==2.0.1
 monotonic==1.5
 netifaces==0.10.4
+nftables==0.1
 oauthlib==3.1.0
 olefile==0.46
 paramiko==2.6.0
@@ -44,11 +48,13 @@ protobuf==3.6.1
 psutil==5.8.0
 psycopg2==2.8.6
 pycairo==1.16.2
+pycparser==2.20
 pycups==1.9.73
 PyGObject==3.36.0
 PyJWT==1.7.1
 pymacaroons==0.13.0
 PyNaCl==1.3.0
+pyOpenSSL==20.0.1
 pyRFC3339==1.1
 python-apt==2.0.0+ubuntu0.20.4.4
 python-dateutil==2.7.3
@@ -60,8 +66,11 @@ reportlab==3.5.34
 requests==2.22.0
 requests-unixsocket==0.2.0
 SecretStorage==2.3.1
+selinux==3.0
 simplejson==3.16.0
 six==1.14.0
+slip==0.6.5
+slip.dbus==0.6.5
 SQLAlchemy==1.4.25
 systemd-python==234
 ubuntu-advantage-tools==20.3
