Prepared to use environmental variables

--- a/.gitignore
+++ b/.gitignore
@@ -164,6 +164,7 @@ Loading complete
 /environment_variables
 /alembic.ini
 /alembic/
-/app/uwsgi.ini
+/app/uwsgi_remote.ini
 /app/uwsgi_local.ini
 .idea
+/app/uwsgi_remote.ini
