--- a/.github/workflows/action_dockerhub.yml
+++ b/.github/workflows/action_dockerhub.yml
@@ -42,7 +42,10 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/devops_school:latest
-          build-args: VAR1=${{ env.DB_ADMIN_USERNAME }}
+          build-args: |
+            VAR1=${{ secrets.DB_ADMIN_USERNAME }}
+            VAR2=${{ secrets.DB_ADMIN_PASSWORD }}
+            VAR3=${{ secrets.DB_URL_POSTGRES }}
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
