Use AWS MariaDB

--- a/app/uwsgi.ini
+++ b/app/uwsgi.ini
@@ -4,4 +4,4 @@ protocol = http
 socket = 0.0.0.0:5000
 env = DB_ADMIN_USERNAME=$(DB_ADMIN_USERNAME)
 env = DB_ADMIN_PASSWORD=$(DB_ADMIN_PASSWORD)
-env = DB_URL_POSTGRES=$(DB_URL)
+env = DB_URL=$(DB_URL)
