--- a/.github/workflows/action_dockerhub.yml
+++ b/.github/workflows/action_dockerhub.yml
@@ -45,7 +45,7 @@ jobs:
           build-args: |
             VAR1=${{ secrets.DB_ADMIN_USERNAME }}
             VAR2=${{ secrets.DB_ADMIN_PASSWORD }}
-            VAR3=${{ secrets.DB_URL_POSTGRES }}
+            VAR3=${{ secrets.DB_URL }}
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
