--- a/.github/workflows/aws_deploy1.yml
+++ b/.github/workflows/aws_deploy1.yml
@@ -9,7 +9,6 @@ on:
   workflow_dispatch:
 
 env:
-  RELEASE_REVISION: ${{ env.GITHUB_SHA }}
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   AWS_REGION: ${{ secrets.AWS_REGION }}
@@ -55,7 +54,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         env:                                                                                                          
-          RELEASE_IMAGE: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.RELEASE_REVISION }}
+          RELEASE_IMAGE: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.GITHUB_SHA }}
         with:
           context: ./
           file: ./Dockerfile
