--- a/.github/workflows/aws_deploy1.yml
+++ b/.github/workflows/aws_deploy1.yml
@@ -31,7 +31,11 @@ jobs:
           access_token: ${{ github.token }} 
       
       - name: Checkout                                  
-        uses: actions/checkout@v2                       
+        uses: actions/checkout@v2    
+        
+      - name: Get current date
+        id: date
+        run: echo "::set-output name=date::$(date +'%H.%M.%S')"
       
       - name: Configure AWS credentials                          
         uses: aws-actions/configure-aws-credentials@v1           
@@ -52,12 +56,12 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         env:                                                                                                          
-          RELEASE_IMAGE: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.GITHUB_RUN_ID }}
+          RELEASE_IMAGE: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ steps.date.outputs.date }}
         with:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: latest
+          tags: ${{ env.RELEASE_IMAGE }}
           build-args: |
             VAR1=${{ secrets.DB_ADMIN_USERNAME }}
             VAR2=${{ secrets.DB_ADMIN_PASSWORD }}
