--- a/.github/workflows/aws_deploy1.yml
+++ b/.github/workflows/aws_deploy1.yml
@@ -35,7 +35,7 @@ jobs:
         
       - name: Get current date
         id: date
-        run: echo "::set-output name=date::$(date +'%d-%b-%H-%M-%S')"
+        run: echo "::set-output name=date::$(date +'%H-%M-%S')"
       
       - name: Configure AWS credentials                          
         uses: aws-actions/configure-aws-credentials@v1           
