--- a/.github/workflows/aws_deploy1.yml
+++ b/.github/workflows/aws_deploy1.yml
@@ -35,7 +35,7 @@ jobs:
         
       - name: Get current date
         id: date
-        run: echo "::set-output name=date::$(date +'%H-%M-%S')"
+        run: echo "::set-output name=date::$(date +'%d-%b-%H-%M-%S')"
       
       - name: Configure AWS credentials                          
         uses: aws-actions/configure-aws-credentials@v1           
@@ -72,4 +72,4 @@ jobs:
         env:                                                                                                          
           RELEASE_IMAGE: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ steps.date.outputs.date }}
         with:                                                                                                         
-          args: set image deployment/flask1-deploy flaskcontainer=${{ env.RELEASE_IMAGE }} -n $KUBE_NAMESPACE   
+          args: set image deployment/flask1-deploy flaskcontainer=nginx -n $KUBE_NAMESPACE   
