--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,4 +4,4 @@ sonar.projectKey=iuriib-sonarcloud
 sonar.projectName=DevOps_school_diploma
 sonar.projectVersion=1.0
 sonar.sourceEncoding=UTF-8
-sonar.sources=app
+sonar.sources=app/
