--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,6 @@
-sonar.exclusions=**/*.bin
 sonar.organization=Iurii-B
 sonar.projectKey=iuriib-sonarcloud
 sonar.projectName=DevOps_school_diploma
-sonar.projectVersion=1.0
-sonar.sourceEncoding=UTF-8
+
+sonar.python.version=3
 sonar.sources=app/
