--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,4 @@
 sonar.organization=Iurii-B
 sonar.projectKey=iuriib-sonarcloud
 sonar.projectName=DevOps_school_diploma
-
-sonar.python.version=3
-sonar.sources=app/
+sonar.sources=src
