--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
 sonar.organization=Iurii-B
 sonar.projectKey=iuriib-sonarcloud
 sonar.projectName=DevOps_school_diploma
-sonar.sources=src
+sonar.sources=app
