--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,4 @@ sonar.organization=Iurii-B
 sonar.projectKey=iuriib-sonarcloud
 sonar.projectName=DevOps_school_diploma
 sonar.sources=app
+sonar.verbose=true
