--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,12 @@
-sonar.organization=Iurii-B
-sonar.projectKey=iuriib-sonarcloud
+sonar.projectKey=Iurii-B_DevOps_school_diploma
+sonar.organization=iuriib-sonarcloud
 
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=DevOps_school_diploma
+#sonar.projectVersion=1.0
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=app
-sonar.verbose=true
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
