--- a/.github/workflows/aws_deploy1.yml
+++ b/.github/workflows/aws_deploy1.yml
@@ -31,7 +31,13 @@ jobs:
           access_token: ${{ github.token }} 
       
       - name: Checkout                                  
-        uses: actions/checkout@v2    
+        uses: actions/checkout@v2
+      
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         
       - name: Get current date
         id: date
