--- a/.github/workflows/aws_deploy1.yml
+++ b/.github/workflows/aws_deploy1.yml
@@ -1,4 +1,5 @@
 name: AWS_Deploy
+# Includes SonarCloud scan
 
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
