--- a/.github/workflows/aws_deploy1.yml
+++ b/.github/workflows/aws_deploy1.yml
@@ -69,10 +69,10 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ${{ env.RELEASE_IMAGE }}
-          build-args: |
-            VAR1=${{ secrets.DB_ADMIN_USERNAME }}
-            VAR2=${{ secrets.DB_ADMIN_PASSWORD }}
-            VAR3=${{ secrets.DB_URL }}
+          #build-args: |
+            #VAR1=${{ secrets.DB_ADMIN_USERNAME }}
+            #VAR2=${{ secrets.DB_ADMIN_PASSWORD }}
+            #VAR3=${{ secrets.DB_URL }}
       
       - name: Deploy to Kubernetes cluster                                                                            
         uses: kodermax/kubectl-aws-eks@master                                                                         
