--- a/.github/workflows/test_terraform.yml
+++ b/.github/workflows/test_terraform.yml
@@ -45,4 +45,4 @@ jobs:
       - name: Deploy to Kubernetes cluster                                                                            
         uses: Consensys/kubernetes-action@master                                                                         
         with:                                                                                                         
-          args: create deployment flaskapp1 --image=nginx -n ${{ KUBE_NAMESPACE }}
+          args: create deployment flaskapp1 --image=nginx -n ${{ env.KUBE_NAMESPACE }}
