--- a/.github/workflows/test_terraform.yml
+++ b/.github/workflows/test_terraform.yml
@@ -41,9 +41,18 @@ jobs:
           aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
     
-    
-      - name: Rollout new deployment to Kubernetes cluster                                                                            
+      - name: Check deployment status
+        id: deploy_status
         uses: Consensys/kubernetes-action@master
-        if: contains(rollout status deploy flask1-deploy -n prod, 'NotFound') == 'true'
         with:                                                                                                         
-          args: create deployment flaskapp1 --image=nginx -n prod
+          args: rollout status deploy flask1-deploy -n prod
+    
+      - name: Print image
+        run: 
+          echo ${{ steps.deploy_status.outputs.result }}
+    
+      #- name: Rollout new deployment to Kubernetes cluster                                                                            
+      #  uses: Consensys/kubernetes-action@master
+      #  if: contains(rollout status deploy flask1-deploy -n prod, 'NotFound') == 'true'
+      #  with:                                                                                                         
+      #    args: create deployment flaskapp1 --image=nginx -n prod
