--- a/.github/workflows/test_terraform.yml
+++ b/.github/workflows/test_terraform.yml
@@ -52,7 +52,7 @@ jobs:
           echo ${{ steps.deploy_status.outputs.result }}
       
       - name: Check if
-        if: contains($(steps.deploy_status.outputs.result), 'flask1-deploy') == 'true'
+        if: contains(${{ steps.deploy_status.outputs.result }}, 'flask1-deploy') == 'true'
         run: echo "Deployment exists"
     
       #- name: Rollout new deployment to Kubernetes cluster                                                                            
