--- a/.github/workflows/test_terraform.yml
+++ b/.github/workflows/test_terraform.yml
@@ -49,9 +49,9 @@ jobs:
     
       - name: Print deployment status
         env:
-          DEPLOY_STATUS: $steps.deploy_status.outputs.result 
+          DEPLOY_STATUS: ${{ steps.deploy_status.outputs.result }}
         run: 
-          echo env.DEPLOY_STATUS
+          echo ${{ env.DEPLOY_STATUS }}
       
       - name: Check if
         if: contains(${{ steps.deploy_status.outputs.result }}, 'flask1-deploy') == 'true'
