--- a/.github/workflows/test_terraform.yml
+++ b/.github/workflows/test_terraform.yml
@@ -48,10 +48,16 @@ jobs:
           printenv
           echo  ${{ steps.deploy_status.outputs.result }}
       
-      - name: Check if
+      - name: If true
         if: contains( env.DEPLOY_STATUS, 'flask1-deploy') == 'true'
         run: |
           echo "Deployment exists"
+          echo ${{ steps.deploy_status.outputs.result }}
+          
+      - name: If false
+        if: contains( env.DEPLOY_STATUS, 'flask1-deploy') != 'true'
+        run: |
+          echo "Deployment doesn't exist"
           echo ${{ steps.deploy_status.outputs.result }}
     
       #- name: Rollout new deployment to Kubernetes cluster                                                                            
