--- a/.github/workflows/test_terraform.yml
+++ b/.github/workflows/test_terraform.yml
@@ -57,7 +57,7 @@ jobs:
         if: contains( env.DEPLOY_STATUS, 'flask1-deploy') != 'true'
         uses: kodermax/kubectl-aws-eks@master
         with:
-          args: apply k8s_deploy.yaml
+          args: apply -f k8s_deploy.yaml
         #run: |
         #  echo "Deployment doesn't exist"
         #  echo ${{ steps.deploy_status.outputs.result }}
