--- a/.github/workflows/test_terraform.yml
+++ b/.github/workflows/test_terraform.yml
@@ -56,6 +56,8 @@ jobs:
       - name: If false
         if: contains( env.DEPLOY_STATUS, 'flask1-deploy') != 'true'
         uses: kodermax/kubectl-aws-eks@master
+        env:                                                                                                          
+          RELEASE_IMAGE: httpd
         with:
           args: apply -f k8s_deploy.yaml
         #run: |
