--- a/.github/workflows/aws_deploy1.yml
+++ b/.github/workflows/aws_deploy1.yml
@@ -63,7 +63,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         env:                                                                                                          
-          RELEASE_IMAGE: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ steps.date.outputs.date }}
+          RELEASE_IMAGE: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:init
         with:
           context: ./
           file: ./Dockerfile
@@ -75,4 +75,4 @@ jobs:
         env:                                                                                                          
           RELEASE_IMAGE: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ steps.date.outputs.date }}
         with:                                                                                                         
-          args: set image deployment/flask1-deploy flaskcontainer=${{ env.RELEASE_IMAGE }} -n $KUBE_NAMESPACE   
+          args: set image deployment/flask1-deploy flaskcontainer=${{ env.RELEASE_IMAGE }} -n $ {{ env.KUBE_NAMESPACE }}
