--- a/.github/workflows/test2_terraform.yml
+++ b/.github/workflows/test2_terraform.yml
@@ -1,4 +1,5 @@
-name: Create new K8s deployment or update existing one
+name: Test2
+# Create new K8s deployment or update existing one
 # Includes SonarCloud scan
 
 on:
