--- a/.github/workflows/noDB_workflow.yml
+++ b/.github/workflows/noDB_workflow.yml
@@ -5,7 +5,7 @@ on:
   # Triggers the workflow on push or pull request events but only for the "noDB_branch" branch
   push:
     branches: 
-      - master
+      - noDB_branch
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
